--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zHH-6e-uOa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zHH-6e-uOa">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment version="2304" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -375,21 +375,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4P6-62-0Jv">
-                            <size key="itemSize" width="159" height="147"/>
+                            <size key="itemSize" width="159" height="153"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="categoryCell" id="x1o-Ib-qXS">
-                                <rect key="frame" x="20" y="20" width="159" height="147"/>
+                                <rect key="frame" x="20" y="20" width="159" height="153"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="159" height="147"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="159" height="153"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kqy-pS-KtN">
-                                            <rect key="frame" x="0.0" y="0.0" width="159" height="115"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="159" height="142"/>
                                         </imageView>
                                     </subviews>
                                 </view>
@@ -397,7 +397,7 @@
                                     <constraint firstAttribute="trailing" secondItem="Kqy-pS-KtN" secondAttribute="trailing" id="53p-fD-VBG"/>
                                     <constraint firstItem="Kqy-pS-KtN" firstAttribute="leading" secondItem="x1o-Ib-qXS" secondAttribute="leading" id="Vdt-mp-VCl"/>
                                     <constraint firstItem="Kqy-pS-KtN" firstAttribute="top" secondItem="x1o-Ib-qXS" secondAttribute="top" id="qaO-Po-0Qv"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="Kqy-pS-KtN" secondAttribute="bottom" constant="24" id="uJN-51-qsP"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="Kqy-pS-KtN" secondAttribute="bottom" constant="3" id="uJN-51-qsP"/>
                                 </constraints>
                             </collectionViewCell>
                         </cells>
@@ -410,7 +410,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fua-Q4-OIu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3825" y="401"/>
+            <point key="canvasLocation" x="-3826.4000000000001" y="400.74962518740631"/>
         </scene>
         <!--Filter-->
         <scene sceneID="rBI-Da-nUu">
@@ -424,13 +424,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Length" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rsJ-8d-VnD">
-                                <rect key="frame" x="159" y="372" width="58" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iXF-5Q-uq8">
                                 <rect key="frame" x="57" y="469" width="260" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -507,8 +500,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0 hour" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ovq-IV-Aqf">
-                                <rect key="frame" x="34" y="422" width="44" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="15 minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ovq-IV-Aqf">
+                                <rect key="frame" x="34" y="422" width="72" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
@@ -546,22 +539,6 @@
                                     <action selector="btn7:" destination="WQ4-6H-5If" eventType="touchUpInside" id="yPE-BS-w5O"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zLA-wm-2JN">
-                                <rect key="frame" x="254" y="283" width="75" height="75"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="9"/>
-                                <connections>
-                                    <action selector="btn9:" destination="WQ4-6H-5If" eventType="touchUpInside" id="eCJ-ll-jio"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UxN-me-XfR">
-                                <rect key="frame" x="151" y="283" width="75" height="75"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="8"/>
-                                <connections>
-                                    <action selector="btn8:" destination="WQ4-6H-5If" eventType="touchUpInside" id="rja-Pf-qUT"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="898-7e-AFu">
                                 <rect key="frame" x="150" y="191" width="75" height="75"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -593,6 +570,21 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rsJ-8d-VnD">
+                                <rect key="frame" x="169" y="372" width="44" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UxN-me-XfR">
+                                <rect key="frame" x="254" y="283" width="75" height="75"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="8"/>
+                                <connections>
+                                    <action selector="btn8:" destination="WQ4-6H-5If" eventType="touchUpInside" id="rja-Pf-qUT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -614,7 +606,6 @@
                         <outlet property="btn6" destination="sjC-wd-Bs8" id="C0r-JZ-MRN"/>
                         <outlet property="btn7" destination="DVy-WS-eKG" id="u5i-ay-Js6"/>
                         <outlet property="btn8" destination="UxN-me-XfR" id="0Nd-RA-1Op"/>
-                        <outlet property="btn9" destination="zLA-wm-2JN" id="OhS-3H-U9z"/>
                         <outlet property="dropdown" destination="hYf-P4-M7g" id="6Ml-Px-uiV"/>
                         <outlet property="textbox" destination="iXF-5Q-uq8" id="nFc-ft-SuL"/>
                         <outlet property="timeLabel" destination="QwA-Y5-U4B" id="5LL-vM-t1f"/>
@@ -623,7 +614,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bjU-lw-oCW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="893" y="-1234"/>
+            <point key="canvasLocation" x="892" y="-1235.5322338830586"/>
         </scene>
         <!--Log in-->
         <scene sceneID="saU-9q-iwJ">
@@ -3005,15 +2996,14 @@
         </scene>
     </scenes>
     <resources>
-        <image name="1" width="287" height="287"/>
-        <image name="2" width="287" height="287"/>
-        <image name="3" width="287" height="287"/>
-        <image name="4" width="287" height="287"/>
-        <image name="5" width="287" height="287"/>
-        <image name="6" width="287" height="286"/>
-        <image name="7" width="287" height="287"/>
-        <image name="8" width="287" height="286"/>
-        <image name="9" width="287" height="286"/>
+        <image name="1" width="143" height="143"/>
+        <image name="2" width="143" height="143"/>
+        <image name="3" width="143" height="143"/>
+        <image name="4" width="143" height="143"/>
+        <image name="5" width="143" height="143"/>
+        <image name="6" width="143" height="143"/>
+        <image name="7" width="143" height="143"/>
+        <image name="8" width="143" height="143"/>
         <image name="CollapseArrow" width="48" height="48"/>
         <image name="MyRoamni" width="32" height="32"/>
         <image name="Nearby" width="32" height="32"/>
