--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -890,7 +890,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to make money with Roamni" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3b-gH-WTG">
-                                                    <rect key="frame" x="87" y="8" width="261" height="29"/>
+                                                    <rect key="frame" x="87" y="8" width="300" height="29"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -924,7 +924,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Roamni" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6K-Tw-0tK">
-                                                    <rect key="frame" x="88" y="0.0" width="111" height="43"/>
+                                                    <rect key="frame" x="88" y="0.0" width="150" height="43"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -960,7 +960,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Incoming Tours" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AlZ-wo-Aan">
-                                                    <rect key="frame" x="89" y="5" width="216" height="32"/>
+                                                    <rect key="frame" x="89" y="5" width="255" height="32"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -988,7 +988,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wat-AS-yQO">
-                                                    <rect key="frame" x="0.0" y="-2" width="336" height="47"/>
+                                                    <rect key="frame" x="0.0" y="-2" width="375" height="47"/>
                                                     <state key="normal" title="Login with Facebook"/>
                                                     <connections>
                                                         <segue destination="VQT-zN-kv0" kind="show" id="jPL-SG-8VL"/>
@@ -2093,7 +2093,7 @@
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JtO-f3-yfu">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <attributedString key="attributedText">
                                     <fragment>
@@ -2105,7 +2105,7 @@ Making money with Roamni is simple:</string>
                                         </attributes>
                                     </fragment>
                                     <fragment>
-                                        <mutableString key="content">
+                                        <string key="content">
 
 Every time one of your tours is purchased in the app, we split it with you 50/50. That means you get 50% of the cost of a tour every time someone buys it, with no limit.
 
@@ -2125,7 +2125,7 @@ Collect the earnings as Roamni credits in the app for you to build and use on ot
 
 3. Earn 50% commission every time your tour is purchased in the app
 
-4. Collect the commission as Roamni credits in the app which you can withdraw at any time as cash, or use to purchase other tours  </mutableString>
+4. Collect the commission as Roamni credits in the app which you can withdraw at any time as cash, or use to purchase other tours  </string>
                                         <attributes>
                                             <font key="NSFont" size="13" name="ArialMT"/>
                                         </attributes>
@@ -2144,7 +2144,7 @@ Collect the earnings as Roamni credits in the app for you to build and use on ot
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pIx-R1-TaT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5445.6000000000004" y="-1684.4077961019491"/>
+            <point key="canvasLocation" x="5444" y="-1685.3073463268368"/>
         </scene>
         <!--About Roam-->
         <scene sceneID="wxc-s2-UME">
@@ -2160,13 +2160,13 @@ Collect the earnings as Roamni credits in the app for you to build and use on ot
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BPS-zq-ZCJ">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <attributedString key="attributedText">
                                     <fragment>
-                                        <mutableString key="content">Roamni is a platform and community that allows people to easily create and share area-based knowledge – on whatever topic they like – with like-minded or curious others, all in a handy, simple-to- use and self-guided voice app.
+                                        <string key="content">Roamni is a platform and community that allows people to easily create and share area-based knowledge – on whatever topic they like – with like-minded or curious others, all in a handy, simple-to- use and self-guided voice app.
 
-Whether you make a tour or take a tour, Roamni gives you the freedom to do your tour, your way.  </mutableString>
+Whether you make a tour or take a tour, Roamni gives you the freedom to do your tour, your way.  </string>
                                         <attributes>
                                             <font key="NSFont" size="13" name="ArialMT"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
@@ -2179,7 +2179,7 @@ Whether you make a tour or take a tour, Roamni gives you the freedom to do your 
                                         </attributes>
                                     </fragment>
                                     <fragment>
-                                        <mutableString key="content">
+                                        <string key="content">
 
 Be your own subject matter expert and tour guide! Talk your way through a tour that anyone can download, listen to and do at their own pace before rating your tour with Roamni kudos. Earn Roamni credits which you can turn into cash when you’re ready.
 
@@ -2187,7 +2187,7 @@ Be your own subject matter expert and tour guide! Talk your way through a tour t
 
 * Be rewarded with unlimited commission
 
-* Simply voice record and upload your tour to get going  </mutableString>
+* Simply voice record and upload your tour to get going  </string>
                                         <attributes>
                                             <font key="NSFont" size="13" name="ArialMT"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
@@ -2200,7 +2200,7 @@ Be your own subject matter expert and tour guide! Talk your way through a tour t
                                         </attributes>
                                     </fragment>
                                     <fragment>
-                                        <mutableString key="content">
+                                        <string key="content">
 
 Roam when you want to. For a unique and personalised perspective on things, simply download, listen and take a tour whenever you like. Can’t find a tour on what you’re interested in? Why not make a tour and make Roamni credits while you’re at it.
 
@@ -2208,7 +2208,7 @@ Roam when you want to. For a unique and personalised perspective on things, simp
 
 * Rate the tours with Roamni kudos
 
-* Affordable and convenient app-based tours – just play and go  </mutableString>
+* Affordable and convenient app-based tours – just play and go  </string>
                                         <attributes>
                                             <font key="NSFont" size="13" name="ArialMT"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
@@ -2238,7 +2238,7 @@ Everyone likes good kudos. When someone takes a tour, they’re asked to rate it
                                         </attributes>
                                     </fragment>
                                     <fragment>
-                                        <mutableString key="content">
+                                        <string key="content">
 
 Earn commission every time your tour is purchased. The more popular your tour, the more you can earn.
 
@@ -2250,7 +2250,7 @@ Collect your Roamni credits to cash out when you like or use them to buy other t
 
 3. Earn 50% commission every time your tour is purchased in the app 
 
-4. Collect the commission as Roamni credits in the app which you can withdraw at any time as cash, or use to purchase other tours  </mutableString>
+4. Collect the commission as Roamni credits in the app which you can withdraw at any time as cash, or use to purchase other tours  </string>
                                         <attributes>
                                             <font key="NSFont" size="13" name="ArialMT"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
@@ -2276,7 +2276,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Otz-Hu-1OT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5436" y="-833.43328335832086"/>
+            <point key="canvasLocation" x="5434.3999999999996" y="-834.33283358320841"/>
         </scene>
         <!--Distribution Partner Reports-->
         <scene sceneID="f9w-vb-kyG">
